SubVersion: $Id$

Log:

- 25/08/2006, version 0.2.7: roms
	- checked with ValGring, tested and validated.
	
- 17/08/2006, version 0.2.6: roms
	- added grouping/ungrouping support for TiGroup (eg tigroup.c provides the same API as grouped.c)
		=> note: no functions removed/renamed; just added new ones
	- added tifiles_file_write_flash2 in order not to break API
	- added tifiles_content_dup_regular/flash (not exported)
	- fixed TI8x file support (introduced bug with fortification)
	- added tifiles_build_filename function (which replaces built-in/static code in various 
		places and some built-in code in TiLP).
	- tifiles_content_write_flash: build filename from the last header (=data).
	- fortified group.c: release memory on error exit

- 10/08/2006, version 0.2.5: roms
	- improved TiGroup support API
	- fixed Travis Evans' bug: can't read some TI86 files due to bad padding of varname
		=> there are 4 TI-86 file format!
	- set model_dst to model if dst is not specified (=CALC_NONE)
	- fixed tifiles_has_backup (don't include USB hand-helds)

- 07/08/2006, version 0.2.4: roms
	- fortified rwfile.c
	- fortified files8x.c
	- fortified files9x.c

- 06/08/2006, version 0.2.3: roms
	- target hand-held is passed by tifiles_content_create_xxxx
	- fortified tigroup.c

- 12/07/2006, version 0.2.2: roms
	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
	Translate filenames again!
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
	- look for the correct module file name on MinGW in tifiles_library_init (kevin)
	- fixed _FORTIFY_SOURCE and strict-aliasing (and a few harmless) warnings (kevin)

- 06/07/2006, version 0.2.1: roms
	- bug #1499672: every edit-locked BASIC and AMS program is marked ASM
	and received as *.8xz, of course this has to be *.8xp for both locked 
	BASIC and ASM.
	- reverted back changes made on tifile encoding <-> raw varname encoding (v0.1.2)