@@ -2,6 +2,9 @@ SubVersion: $Id$
 
 Log:
 
+	- tigroup.c: use #ifndef __WIN32__ instead of #ifdef __LINUX__ to check for strcasecmp vs. stricmp (kevin)
+	- tigroup.c: fixed code typos (missing asterisk, m instead of n) (kevin)
+
 - 25/08/2006, version 0.2.7: roms
 	- checked with ValGring, tested and validated.
 	
